// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders clusters disabled message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-1"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-1"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="box-shadow: none;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="css-k008qs"
          >
            <div
              class="css-19gc7lg"
            >
              <svg
                aria-hidden="true"
                class="css-xeknh8"
                fill="var(--pf-global--warning-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <span
              style="margin-left: .4rem;"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link css-1dkl6e6"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Search is disabled on some clusters.
              </button>
            </span>
          </div>
        </div>
      </article>
    </div>
  </div>
</body>
`;

exports[`renders empty message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-2"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders unknown message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-3"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="box-shadow: none;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="css-k008qs"
          >
            <div
              class="css-19gc7lg"
            >
              <svg
                aria-hidden="true"
                class="css-xeknh8"
                fill="var(--pf-global--warning-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <span
              style="margin-left: .4rem;"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link css-1dkl6e6"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Search is disabled on some clusters.
              </button>
            </span>
          </div>
        </div>
      </article>
    </div>
  </div>
</body>
`;

exports[`renders with Global Search alert & no message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-4"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Global search
                                <button
                                  aria-disabled="false"
                                  class="pf-c-button pf-m-plain"
                                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                                  data-ouia-component-type="PF4/Button"
                                  data-ouia-safe="true"
                                  style="padding: 0px; margin-left: 8px; vertical-align: middle;"
                                  type="button"
                                >
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style="vertical-align: -0.125em;"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                    />
                                  </svg>
                                </button>
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;
